# laser-solver

./: .gitignore  CMakeLists.txt  README.md
apps/: convergence2d.cpp  laser1d.cpp  laser2d.cpp  shocktube.cpp
apps/old_apps/: 2d_error_test.cpp  error_test.cpp  euler2d.cpp  euler2d_weno.cpp  laser2d_old.cpp  mesh_test.cpp  shocktube1d.cpp  shocktube2d.cpp
configs/: laser2d.toml
configs/convergence2d/: conv_FirstOrder_128.toml  conv_FirstOrder_256.toml  conv_FirstOrder_512.toml  conv_FirstOrder_64.toml  conv_MUSCL_64.toml  conv_TENO5_128.toml  conv_TENO5_256.toml  conv_TENO5_512.toml  conv_TENO5_64.toml  conv_WENO3_128.toml  conv_WENO3_256.toml  conv_WENO3_512.toml  conv_WENO3_64.toml  conv_WENO5Z_128.toml  conv_WENO5Z_256.toml  conv_WENO5Z_512.toml  conv_WENO5Z_64.toml  conv_WENO5_128.toml  conv_WENO5_256.toml  conv_WENO5_512.toml  conv_WENO5_64.toml
configs/laser_runs/: laser2d_FirstOrder_200x200.toml  laser2d_FirstOrder_256x256.toml  laser2d_FirstOrder_512x512.toml  laser2d_TENO5_200x200.toml  laser2d_TENO5_256x256.toml  laser2d_TENO5_512x512.toml  laser2d_WENO3_200x200.toml  laser2d_WENO3_256x256.toml  laser2d_WENO3_512x512.toml  laser2d_WENO5Z_256x256.toml  laser2d_WENO5_200x200.toml  laser2d_WENO5_256x256.toml  laser2d_WENO5_512x512.toml
configs/old_error_runs/: error2d_128.toml  error2d_256.toml  error2d_512.toml  error2d_64.toml  laser_config.toml  shocktube.toml  shocktube2d.toml  temp_esrror2d_TEMPLATE.toml
include/ls/: bc.hpp  eos.hpp  flux.hpp  fv_update.hpp  io.hpp  mesh.hpp  mesh1d.hpp  recon.hpp  riemann.hpp  source.hpp  time_init.hpp  time_int.hpp  types.hpp
scripts/: 1d_step.ipynb  Computational_Domain_Figure.ipynb  Convergence.ipynb  animate_2d.py  animate_laser2d.py  batch_stepcsv_runs_to_mp4.py  convergance.py  convergence_results.csv  create_fig.ipynb  create_fig_2.ipynb  create_fig_3.ipynb  create_fig_4.ipynb  debug_run_all_laser.sh  diagnostics_analysis.xlsx  diagnostics_analysis2.xlsx  diagnostics_analysis3.xlsx  diagnostics_analysis4.xlsx  diagnostics_summary_table.csv  error_convergence.csv  one_step.ipynb  plot_pressure.py  pressure_gradient_analysis.ipynb  run_all_laser.sh  try_to_get_value.py  weno2d_convergence.py
